--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT = 8747
 JWT_KEY = "(SHJSJH88277737*^><ISIU@())(($894843))"
-ORIGIN = "http://localhost:5173/"
+ORIGIN = "http://localhost:5173"
 MONGO_URI =mongodb+srv://abhay:abhay@cluster0.pkvd6.mongodb.net/
